--- a/oldHtml/catalogue.html
+++ b/oldHtml/catalogue.html
@@ -9,7 +9,7 @@
 <body>
 
 
-<div class="cat_wrap" onclick="document.location = '?product=1'">
+<div class="cat_wrap" onclick="document.location = '?id=1'">
 	<div class="product_header_ltr">
 		<h1>Forberz™ Ride Effect™ - Get the right effect!</h1>
 		<h2>High quality detailing, restore and care compound for motor vehicles.</h2>
@@ -22,7 +22,7 @@
 	<div class="catdiv_ltr">
 		<div class="prod_img_buy">
 			<img class="product_eng" src="forberz_ride_effect_120_front.jpg" alt="Forberz Ride Effect 120 gr" />
-			<a class="cat_nav" href="?product=1" style="background-color:#111; width:8em; margin:0; margin-top:1em; ">MORE INFO...</a>
+			<a class="cat_nav" href="?id=1" style="background-color:#111; width:8em; margin:0; margin-top:1em; ">MORE INFO...</a>
 		</div>
 
 		<ul class="prod_point">
