changed links (absolute --> relative) and added <base> and updated DB.sql

--- a/oldHtml/catalogue.html
+++ b/oldHtml/catalogue.html
@@ -22,7 +22,7 @@
 	<div class="catdiv_ltr">
 		<div class="prod_img_buy">
 			<img class="product_eng" src="forberz_ride_effect_120_front.jpg" alt="Forberz Ride Effect 120 gr" />
-			<a class="cat_nav" href="?id=1" style="background-color:#111; width:8em; margin:0; margin-top:1em; ">MORE INFO...</a>
+			<a class="cat_nav" href="site/catalogue.php?id=1" style="background-color:#111; width:8em; margin:0; margin-top:1em; ">MORE INFO...</a>
 		</div>
 
 		<ul class="prod_point">
